--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-prod": "set NODE_ENV=production node ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
@@ -15,7 +15,7 @@
   "devDependencies": {
     "eslint": "^8.18.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^2.0.18"
+    "nodemon": "^1.3.3"
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
