--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-prod": "NODE_ENV=production & nodemon ./src/server.js",
-    "start-dev": "NODE_ENV=development & nodemon ./src/server.js",
+    "start-prod": "SET NODE_ENV=production & node ./src/server.js",
+    "start-dev": "SET NODE_ENV=development & node ./src/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "joi": "^17.6.0",
     "nanoid": "^3.1.22"
   }
 }
