--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-prod": "SET NODE_ENV=production & node ./src/server.js",
-    "start-dev": "SET NODE_ENV=development & node ./src/server.js",
+    "start-prod": "NODE_ENV=production & node ./src/server.js",
+    "start-dev": "NODE_ENV=development & node ./src/server.js",
     "lint": "eslint ./src"
   },
   "keywords": [],
